@@ -1,3 +1,8 @@
+Tue Dec 22 15:21:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (str_compat_and_valid): as scrub does nothing for dummy
+	  encoding string now, incompatible encoding is not a matter.
+
 Tue Dec 22 14:31:28 2015  Toru Iwase  <tietew@tietew.net>
 
 	* ext/cgi/escape/escape.c (optimized_escape_html): CGI.escapeHTML
